--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "netklix",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -19,5 +18,6 @@
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "gulp": "^4.0.2"
-  }
+  },
+  "description": ""
 }
